--- a/src/app/global/hero/hero.component.html
+++ b/src/app/global/hero/hero.component.html
@@ -33,8 +33,18 @@
   <div data-aos="fade-in" data-aos-delay="200" data-aos-duration="3000" *ngIf="home">
     <h1>Branding for a better future</h1>
     <p class="hero__tagline">Because revolutionary technology <span style="display: block">needs revolutionary design&trade;</span></p>
-    <div class="hero__button" data-aos="fade-in" data-aos-delay="600" data-aos-duration="3000">
-      <a [routerLink]="['/work']" class="btn btn--lg">See the work</a>
+
+    <div class="row" data-aos="fade-in" data-aos-delay="600" data-aos-duration="3000">
+      <div class="col text-right">
+        <div class="margin-top--lg">
+            <a [routerLink]="['/work']" class="hero__button btn btn--lg">See the work</a>
+        </div>
+      </div>
+      <div class="col text-left">
+        <div class="margin-top--lg">
+            <a [routerLink]="['/contact']" class="hero__button btn btn--lg btn--primary btn--primary-outline">Book a consultation</a>
+        </div>
+      </div>
     </div>
   </div>
 </div>
