--- a/src/app/global/header/header.component.html
+++ b/src/app/global/header/header.component.html
@@ -29,12 +29,6 @@
       <span class="header__emoji" aria-hidden="true">📕️</span>
       <a href="https://blog.jupiterandthegiraffe.com">Discover</a>
     </li>
-    
-    <li class="no-hover">
-      <span class="header__emoji" aria-hidden="true">📲</span>
-      <span class="hidden-sm">+44 20 3290 9902</span>
-      <a href="tel:442032909902" class="hidden-sm-up">+44 20 3290 9902</a>
-    </li>
   </ul>
 </header>
 
@@ -75,7 +69,7 @@
   </li>
   
   <li class="header__menu-mobile-item header__menu-mobile-item--number">
-    <span class="header__menu-mobile-item-text">Call us:</span>
+    <span class="header__menu-mobile-item-text">Book a consultation:</span>
     <a href="tel:442032909902">+44 20 3290 9902</a>
   </li>
 </ul>
