--- a/src/app/global/header/header.component.scss
+++ b/src/app/global/header/header.component.scss
@@ -43,6 +43,12 @@
     }
   }
 
+  &__book-consultation {
+    font-size: 11px;
+    margin-left: 30px;
+    display: block;
+  }
+
 
   &__emoji {
     margin-right: $space-medium;
