--- a/src/app/global/hero/hero.component.scss
+++ b/src/app/global/hero/hero.component.scss
@@ -9,6 +9,12 @@
   overflow: hidden;
   padding: $space-xlrg $space-medium;
 
+  &__button {
+    @include md {
+      width: 200px;
+    }
+  }
+
   &.home-page {
     height: 100vh;
     margin-bottom: 0;
