--- a/src/app/pages/who/who.component.html
+++ b/src/app/pages/who/who.component.html
@@ -1,7 +1,7 @@
 <div class="white-bg who">
   <section class="container-fluid">
     <header>
-      <h2>Who are Jupiter and who is the Giraffe?</h2>
+      <h2>Who is Jupiter and who is the Giraffe?</h2>
     </header>
 
     <div [innerHTML]="content.content.rendered" *ngIf="content"></div>
