update email message

--- a/src/app/global/email-popup/email-popup.component.html
+++ b/src/app/global/email-popup/email-popup.component.html
@@ -6,7 +6,7 @@
       </h3>
 
       <p *ngIf="submitted">
-        {{submitted.msg}}
+        {{submitted.msg}}. <strong>Please make sure you check your spam</strong>.
       </p>
     </div>
 
