--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <section class="home">
   <div class="container-fluid">
-    <h1 class="sr-only">Jupiter and the Giraffe | Brand Strategy & Design studio for digital products</h1>
+    <h1 class="sr-only">Jupiter and the Giraffe | Brand Strategy & Design studio for SaaS and digital products</h1>
 
     <p class="home__tagline text-center" data-aos="fade-in" data-aos-delay="200" data-aos-duration="1000">
       Jupiter and the Giraffe are a
