--- a/src/assets/sass/objects/_btn.scss
+++ b/src/assets/sass/objects/_btn.scss
@@ -76,14 +76,14 @@
   &--strategy {
     padding: $space-large;
     background-color: $color-malibu;
-    border: 1px solid $color-black;
+    border: 1px solid $color-malibu;
     margin: $space-large 0;
 
     &:hover,
     &:focus {
       background-color: transparent;
       color: $color-black;
-      border-color: $color-black;
+      border-color: $color-malibu;
       outline: none;
 
     }
