--- a/src/app/pages/funnel/funnel.component.html
+++ b/src/app/pages/funnel/funnel.component.html
@@ -1,133 +1,123 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title></title>
-</head>
-<body>
-  <div class="white-bg free-strategy">
-    <div class="container-fluid padding-top--xlg padding-bottom--xlg">
-      <p><strong>Your revolutionary technology needs revolutionary branding</strong></p>
-      <p>  We'll guide you with what you need to start building your own brand  and stand out in the market.</p>
-      <ul>
-        <li>Understand your unique position in the market </li>
-        <li>Discover new ways to achieve your goals</li>
-        <li>Get clarity on what you need to do next </li>
-      </ul>
-      <div class="video"></div>
-      <ol class="free-strategy__steps">
-        <li class="free-strategy__step"
-            data-aos="fade-up">
-          <h3>Schedule</h3>
-          <p>Schedule your <strong>free consultation</strong> below with <em>Jupiter and the Giraffe</em> co-founder Samuel&nbsp;Gregory.</p>
-        </li>
-        <li class="free-strategy__step"
-            data-aos="fade-up"
-            data-aos-delay="200">
-          <h3>Consultation</h3>
-          <p>We'll take you through a <strong>1 hour strategy call</strong> where we'll ask you about your current product and existing branding to determine the next steps.</p>
-        </li>
-        <li class="free-strategy__step"
-            data-aos="fade-up"
-            data-aos-delay="400">
-          <h3>Next steps</h3>
-          <p>Within 24 hours <strong>you'll receive specific steps</strong> on how you can <strong>improve your branding</strong> and stand out in the market.</p>
-        </li>
-        <li class="free-strategy__step"
-            data-aos="fade-up"
-            data-aos-delay="800">
-          <h3>Start building</h3>
-          <p>Now it's up to you. Implement our suggestions and <strong>see your brand come to life</strong>.</p>
-        </li>
-      </ol>
-      <div class="text-center"
-           data-aos="fade-up">
-        <a class="btn btn--strategy"
-             href="https://calendly.com/jupiterandthegiraffe/free-strategy-consultation"
-             target="_blank">Book your free consultation</a>
-      </div>
-    </div>
-    <div class="free-strategy__section text-center">
-      <section class="container-fluid padding-top--xlg padding-bottom--xlg">
-        <h2>Testimonials</h2>
-        <div class="free-strategy__testimonials-list">
-          <div class="free-strategy__testimonial">
-            <img alt=""
-                 class="free-strategy__testimonial-image img-fluid">
-            <div class="free-strategy__testimonial-quote">
-              &gt;
-            </div>
-          </div>
-        </div>
-        <div data-aos="fade-up">
-          <a class="btn btn--strategy"
-               href="https://calendly.com/jupiterandthegiraffe/free-strategy-consultation"
-               target="_blank">Book your free consultation</a>
-        </div>
-      </section>
-    </div>
-    <div class="container-fluid">
-      <section class="padding-top--xlg padding-bottom--xlg">
-        <h2>Don't miss out!</h2>
-        <p>With your new brand you could have;</p>
-        <ul>
-          <li data-aos="fade-left">
-            <p><strong>Customer recognition</strong>. Having a strong brand aids customer recognition. This means when a customer is shopping for a particular product or considering a company to perform a service, they will recognise your company in
-            the running. Consumers are far more likely to choose a brand that they recognise over something unfamiliar, even if they don’t know a great deal about your company at the time. </p>
-          </li>
-          <li data-aos="fade-left"
-              data-aos-delay="200">
-            <p><strong>Competitive edge in the market</strong>. Your brand is what differentiates you in the marketplace. When customers recognise and back your brand, it helps give you a competitive edge. The more recognition you receive and the
-            more you build your brand, the more you'll find that your brand elevates and is competitive with other well-known brands. </p>
-          </li>
-          <li data-aos="fade-left"
-              data-aos-delay="400">
-            <p><strong>Easy introduction of new products</strong>. When you already have a strong brand and loyal customers, it is often easier and less expensive to introduce new products or test them out before you further invest in them. If you
-            have a loyal brand following, your customers will often be interested in your new products and even anticipate them being released.</p>
-          </li>
-          <li data-aos="fade-left"
-              data-aos-delay="800">
-            <p><strong>Customer loyalty and shared values</strong>. The recognition and elevation that a strong brand builds upon all lend to greater customer loyalty. Customers are attracted to brands that they share values with. When you build a
-            strong brand, you need to convey these values to build an emotional connection with customers. Brand loyalty often lasts a lifetime and even transfers to future generations. </p>
-          </li>
-          <li data-aos="fade-left"
-              data-aos-delay="1000"><strong>Enhanced credibility and ease of purchase</strong>. Having a strong, well-known brand enhances your credibility with customers, your industry, and the marketplace as a whole. As you build your credibility,
-              you also build recognition, loyalty, and competitiveness. Everything goes hand-in-hand, and you’ll find that your credibility has a direct connection to customers ease of purchase. We want to buy from companies we like, know, and
-              trust. If your brand is credible, you’re far more likely to get the sale.</li>
-        </ul>
-        <div class="text-center"
-             data-aos="fade-up">
-          <a class="btn btn--strategy"
-               href="https://calendly.com/jupiterandthegiraffe/free-strategy-consultation"
-               target="_blank">Book your free consultation</a>
-        </div>
-      </section>
-    </div>
-    <div class="free-strategy__section">
-      <section class="container-fluid padding-top--xlg padding-bottom--xlg">
-        <h2 class="text-center">Want more?</h2>
-        <div class="row free-strategy__pdf">
-          <div class="col-sm">
-            <p><strong>Free PDF</strong> on how to build an awesome brand.</p>
-            <p>As soon as you book you'll receive a free PDF on how you can <strong>build your own brand in 8 awesome steps</strong>.</p>
-            <p>Book now and receive <strong>3 bonus steps</strong>.</p>
-            <div data-aos="fade-up">
-              <a class="btn btn--strategy"
-                   href="https://calendly.com/jupiterandthegiraffe/free-strategy-consultation"
-                   target="_blank">Book your free consultation</a>
-            </div>
-          </div>
-        </div>
-      </section>
-    </div>
-    <div class="container-fluid padding-top--xlg padding-bottom--xlg text-center">
-      <h2>Book now</h2>
-      <p>Don't waste a moment! Book now and receive practical advise on your next branding move.</p>
-      <div data-aos="fade-up">
-        <a class="btn btn--strategy"
-             href="https://calendly.com/jupiterandthegiraffe/free-strategy-consultation"
-             target="_blank">Book your free consultation</a>
-      </div>
+<div class="white-bg free-strategy">
+  <div class="container-fluid padding-top--xlg padding-bottom--xlg">
+    <p><strong>Your revolutionary technology needs revolutionary branding</strong></p>
+    <p>  We'll guide you with what you need to start building your own brand  and stand out in the market.</p>
+    <ul>
+      <li>Understand your unique position in the market </li>
+      <li>Discover new ways to achieve your goals</li>
+      <li>Get clarity on what you need to do next </li>
+    </ul>
+    <div class="video"></div>
+    <ol class="free-strategy__steps">
+      <li class="free-strategy__step"
+          data-aos="fade-up">
+        <h3>Schedule</h3>
+        <p>Schedule your <strong>free consultation</strong> below with <em>Jupiter and the Giraffe</em> co-founder Samuel&nbsp;Gregory.</p>
+      </li>
+      <li class="free-strategy__step"
+          data-aos="fade-up"
+          data-aos-delay="200">
+        <h3>Consultation</h3>
+        <p>We'll take you through a <strong>1 hour strategy call</strong> where we'll ask you about your current product and existing branding to determine the next steps.</p>
+      </li>
+      <li class="free-strategy__step"
+          data-aos="fade-up"
+          data-aos-delay="400">
+        <h3>Next steps</h3>
+        <p>Within 24 hours <strong>you'll receive specific steps</strong> on how you can <strong>improve your branding</strong> and stand out in the market.</p>
+      </li>
+      <li class="free-strategy__step"
+          data-aos="fade-up"
+          data-aos-delay="800">
+        <h3>Start building</h3>
+        <p>Now it's up to you. Implement our suggestions and <strong>see your brand come to life</strong>.</p>
+      </li>
+    </ol>
+    <div class="text-center"
+          data-aos="fade-up">
+      <a class="btn btn--strategy"
+            href="https://calendly.com/jupiterandthegiraffe/free-strategy-consultation"
+            target="_blank">Book your free consultation</a>
     </div>
   </div>
-</body>
-</html>
+  <div class="free-strategy__section text-center">
+    <section class="container-fluid padding-top--xlg padding-bottom--xlg">
+      <h2>Testimonials</h2>
+      <div class="free-strategy__testimonials-list">
+        <div class="free-strategy__testimonial" *ngFor="let testimonial of testimonials">
+          <img [src]="testimonial._embedded['wp:featuredmedia'][0].source_url" alt="" class="free-strategy__testimonial-image img-fluid">
+          <div class="free-strategy__testimonial-quote" [innerHTML]="testimonial.content.rendered"></div>
+          <div [innerHTML]="testimonial.title.rendered"></div>
+        </div>
+      </div>
+      <div data-aos="fade-up">
+        <a class="btn btn--strategy"
+              href="https://calendly.com/jupiterandthegiraffe/free-strategy-consultation"
+              target="_blank">Book your free consultation</a>
+      </div>
+    </section>
+  </div>
+  <div class="container-fluid">
+    <section class="padding-top--xlg padding-bottom--xlg">
+      <h2>Don't miss out!</h2>
+      <p>With your new brand you could have;</p>
+      <ul>
+        <li data-aos="fade-left">
+          <p><strong>Customer recognition</strong>. Having a strong brand aids customer recognition. This means when a customer is shopping for a particular product or considering a company to perform a service, they will recognise your company in
+          the running. Consumers are far more likely to choose a brand that they recognise over something unfamiliar, even if they don’t know a great deal about your company at the time. </p>
+        </li>
+        <li data-aos="fade-left"
+            data-aos-delay="200">
+          <p><strong>Competitive edge in the market</strong>. Your brand is what differentiates you in the marketplace. When customers recognise and back your brand, it helps give you a competitive edge. The more recognition you receive and the
+          more you build your brand, the more you'll find that your brand elevates and is competitive with other well-known brands. </p>
+        </li>
+        <li data-aos="fade-left"
+            data-aos-delay="400">
+          <p><strong>Easy introduction of new products</strong>. When you already have a strong brand and loyal customers, it is often easier and less expensive to introduce new products or test them out before you further invest in them. If you
+          have a loyal brand following, your customers will often be interested in your new products and even anticipate them being released.</p>
+        </li>
+        <li data-aos="fade-left"
+            data-aos-delay="800">
+          <p><strong>Customer loyalty and shared values</strong>. The recognition and elevation that a strong brand builds upon all lend to greater customer loyalty. Customers are attracted to brands that they share values with. When you build a
+          strong brand, you need to convey these values to build an emotional connection with customers. Brand loyalty often lasts a lifetime and even transfers to future generations. </p>
+        </li>
+        <li data-aos="fade-left"
+            data-aos-delay="1000"><strong>Enhanced credibility and ease of purchase</strong>. Having a strong, well-known brand enhances your credibility with customers, your industry, and the marketplace as a whole. As you build your credibility,
+            you also build recognition, loyalty, and competitiveness. Everything goes hand-in-hand, and you’ll find that your credibility has a direct connection to customers ease of purchase. We want to buy from companies we like, know, and
+            trust. If your brand is credible, you’re far more likely to get the sale.</li>
+      </ul>
+      <div class="text-center"
+            data-aos="fade-up">
+        <a class="btn btn--strategy"
+              href="https://calendly.com/jupiterandthegiraffe/free-strategy-consultation"
+              target="_blank">Book your free consultation</a>
+      </div>
+    </section>
+  </div>
+  <div class="free-strategy__section">
+    <section class="container-fluid padding-top--xlg padding-bottom--xlg">
+      <h2 class="text-center">Want more?</h2>
+      <div class="row free-strategy__pdf">
+        <div class="col-sm">
+          <p><strong>Free PDF</strong> on how to build an awesome brand.</p>
+          <p>As soon as you book you'll receive a free PDF on how you can <strong>build your own brand in 8 awesome steps</strong>.</p>
+          <p>Book now and receive <strong>3 bonus steps</strong>.</p>
+          <div data-aos="fade-up">
+            <a class="btn btn--strategy"
+                  href="https://calendly.com/jupiterandthegiraffe/free-strategy-consultation"
+                  target="_blank">Book your free consultation</a>
+          </div>
+        </div>
+      </div>
+    </section>
+  </div>
+  <div class="container-fluid padding-top--xlg padding-bottom--xlg text-center">
+    <h2>Book now</h2>
+    <p>Don't waste a moment! Book now and receive practical advise on your next branding move.</p>
+    <div data-aos="fade-up">
+      <a class="btn btn--strategy"
+            href="https://calendly.com/jupiterandthegiraffe/free-strategy-consultation"
+            target="_blank">Book your free consultation</a>
+    </div>
+  </div>
+</div>
