--- a/src/app/pages/funnel/funnel.component.html
+++ b/src/app/pages/funnel/funnel.component.html
@@ -99,6 +99,9 @@
       <h2 class="text-center">Want more?</h2>
       <div class="row free-strategy__pdf">
         <div class="col-sm">
+          <img src="/assets/images/pdf-image-min.png" alt="" data-aos="fade-right">
+        </div>
+        <div class="col-sm">
           <p><strong>Free PDF</strong> on how to build an awesome brand.</p>
           <p>As soon as you book you'll receive a free PDF on how you can <strong>build your own brand in 8 awesome steps</strong>.</p>
           <p>Book now and receive <strong>3 bonus steps</strong>.</p>
