remove animation delay

--- a/src/app/pages/funnel/funnel.component.html
+++ b/src/app/pages/funnel/funnel.component.html
@@ -66,23 +66,19 @@
           <p><strong>Customer recognition</strong>. Having a strong brand aids customer recognition. This means when a customer is shopping for a particular product or considering a company to perform a service, they will recognise your company in
           the running. Consumers are far more likely to choose a brand that they recognise over something unfamiliar, even if they don’t know a great deal about your company at the time. </p>
         </li>
-        <li data-aos="fade-left"
-            data-aos-delay="200">
+        <li data-aos="fade-left">
           <p><strong>Competitive edge in the market</strong>. Your brand is what differentiates you in the marketplace. When customers recognise and back your brand, it helps give you a competitive edge. The more recognition you receive and the
           more you build your brand, the more you'll find that your brand elevates and is competitive with other well-known brands. </p>
         </li>
-        <li data-aos="fade-left"
-            data-aos-delay="400">
+        <li data-aos="fade-left">
           <p><strong>Easy introduction of new products</strong>. When you already have a strong brand and loyal customers, it is often easier and less expensive to introduce new products or test them out before you further invest in them. If you
           have a loyal brand following, your customers will often be interested in your new products and even anticipate them being released.</p>
         </li>
-        <li data-aos="fade-left"
-            data-aos-delay="800">
+        <li data-aos="fade-left">
           <p><strong>Customer loyalty and shared values</strong>. The recognition and elevation that a strong brand builds upon all lend to greater customer loyalty. Customers are attracted to brands that they share values with. When you build a
           strong brand, you need to convey these values to build an emotional connection with customers. Brand loyalty often lasts a lifetime and even transfers to future generations. </p>
         </li>
-        <li data-aos="fade-left"
-            data-aos-delay="1000"><strong>Enhanced credibility and ease of purchase</strong>. Having a strong, well-known brand enhances your credibility with customers, your industry, and the marketplace as a whole. As you build your credibility,
+        <li data-aos="fade-left"><strong>Enhanced credibility and ease of purchase</strong>. Having a strong, well-known brand enhances your credibility with customers, your industry, and the marketplace as a whole. As you build your credibility,
             you also build recognition, loyalty, and competitiveness. Everything goes hand-in-hand, and you’ll find that your credibility has a direct connection to customers ease of purchase. We want to buy from companies we like, know, and
             trust. If your brand is credible, you’re far more likely to get the sale.</li>
       </ul>
