--- a/src/app/global/get-in-touch/get-in-touch.component.html
+++ b/src/app/global/get-in-touch/get-in-touch.component.html
@@ -1,7 +1,7 @@
 <div class="get-in-touch text-center">
   <section>
     <header>
-      <h2>{{title || "Ready to launch?"}}</h2>
+      <h2 class="text-center">{{title || "Ready to launch?"}}</h2>
     </header>
     <p>
       Enough talking, let's get right to it.
