--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <section class="home">
   <div class="container-fluid">
-    <h1 class="sr-only">Jupiter and the Giraffe | Brand Strategy & Design studio for SaaS and digital products</h1>
+    <h1 class="sr-only">Jupiter and the Giraffe | Brand Strategy & Design studio for life science startups</h1>
 
 
     <div class="home__tagline-wrapper">
